fix wrap and add img

--- a/src/assets/_footer.css
+++ b/src/assets/_footer.css
@@ -3,5 +3,5 @@ footer {
     color: #ffffff;
     padding: 20px;
     text-align: center;
-    height: 40px;
+    height: 60px;
   }
