--- a/src/assets/_main.css
+++ b/src/assets/_main.css
@@ -3,23 +3,24 @@ main {
     background-color: #141414;
     width: 100%;
     max-width: 1920px;
+    height: auto;
 }
 
-.movie-list{
+
+.d-wrap{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 10px;
+    gap: 20px;
 }
 
 
 .movie {
-    width: calc(100% / 4);
+    width: calc((100% / 6) - 20px);
     padding: 20px;
-    border: 1px solid #ccc;
     border-radius: 5px;
     margin-bottom: 10px;
     box-sizing: border-box;
+    color: white;
 }
 
 .movie h2 {
@@ -28,4 +29,14 @@ main {
 
 .movie p {
     margin: 5px 0;
+}
+
+.error-message{
+    color: white;
+}
+
+.movie img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
 }
